deploy/k8s/pvc.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: leaf-blog
